# fHuffman

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  efficiency_ff  efficiency_thr  ff  ff_scal  general_test.sh  helper.py  huff_ff  huff_ff.cpp  huff_seq  huff_seq.cpp  huff_thr  huff_thr.cpp  out  plotter.py  report.aux  report.out  report.tex  seq  sequential  sequential.cpp  test.sh  test8gb  tests.sh  thr_scal  valgrind_test.sh
dataset/: test.txt
includes/: huffman_codes.cpp  shared_queue.cpp  utils.cpp  utimer.cpp
outputs/: encoded.txt  test_decoded.txt  test_encoded.txt
report/: report.aux  report.blg  report.out  report.tex
src/: huff_ff.cpp  huff_seq.cpp  huff_thr.cpp
